Added Simultaneous Lane and Vehicle Detection in README generator

--- a/Vehicle-Detection.ipynb
+++ b/Vehicle-Detection.ipynb
@@ -623,6 +623,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### 2. Simulateous Vehicle and Lane Detection \n",
+    "\n",
+    "The youtube video of the opional implementation of simultaneous vechicle and lane detection can be accessed by clicking the following image link. The code for the same can be accessed [here](./Simultaneous-Vehicle-and-Lane-Detection.ipynb).\n",
+    "\n",
+    "[![VehicleDetection](http://img.youtube.com/vi/PkLdtqa_Qts/0.jpg)](http://www.youtube.com/watch?v=PkLdtqa_Qts)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Discussion\n",
     "---\n",
     "\n",
